# qbeast-spark

./: .gitignore  .scalafix.conf  .scalafmt.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  build.sbt  scalastyle-config.xml  shell.nix
utils/visualizer/: Makefile  README.md  pyproject.toml  requirements.txt  setup.py
utils/visualizer/docs/tables/: .148afd9c-5556-47b3-b3ae-bb70b1045378.parquet.crc  .86a6de36-f994-4e33-b964-a61b602e719c.parquet.crc  .a34a8775-57ef-480c-89ab-0583115a20d4.parquet.crc  .a37fc07c-78f2-4c18-a39a-0bf8d8732cd8.parquet.crc  .a76d8056-9fe3-430e-af33-c914fa13eae3.parquet.crc  .c862e26a-dca0-4fd5-a534-4601b76fd3a2.parquet.crc  .d7c9f269-d0fe-4d1b-98af-d6d2d90f53dc.parquet.crc  07d7e995-c231-4090-a85a-bf1f37db4d05.parquet  148afd9c-5556-47b3-b3ae-bb70b1045378.parquet  86a6de36-f994-4e33-b964-a61b602e719c.parquet  a34a8775-57ef-480c-89ab-0583115a20d4.parquet  a37fc07c-78f2-4c18-a39a-0bf8d8732cd8.parquet  a76d8056-9fe3-430e-af33-c914fa13eae3.parquet  b93d7c67-c1b1-49f7-8e80-4d10245dad8e.parquet  b94d1790-34ce-42df-a37f-8df88c6b3122.parquet  c8dd0083-1081-42da-9faa-d5d16c84e596.parquet  cecac747-87fe-4cfe-8c36-0de2fddaf95d.parquet
utils/visualizer/qviz/: __init__.py  block.py  content_loader.py  cube.py  drawing_elements.py  qviz.py  sampling_info.py
utils/visualizer/tests/: block_test.py  content_loader_test.py  cube_test.py  drawing_elements_test.py  sampling_info_test.py  unit_test.py
utils/visualizer/tests/resources/test_table_delta/: .0211da23-1e6b-4edc-8fda-6ed7f2f48e6b.parquet.crc  .061c540c-e216-4806-beba-f05e6e8c59df.parquet.crc  .3970297b-552b-4004-9387-ea4f7b4125e5.parquet.crc  .4e63794a-8042-4f40-917b-2c0832ef8cfe.parquet.crc  .4fa216b5-84db-49a0-a55d-14c421776670.parquet.crc  .516fca82-3354-46f0-acaf-ac101eac6448.parquet.crc  (+26 more)
(+1031 files in other folders)
