[tool.poetry]
name = "viz-dependencies"
version = "0.1.0"
description = "OTree Index Visualization dependencies"
authors = ["qbeast"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Brotli = "1.0.9"
click = "8.1.3"
dash = "2.17.1"
dash-core-components = "2.0.0"
dash-cytoscape = "0.3.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
Flask = "2.2.5"
Flask-Compress= "1.12"
importlib-metadata = "4.11.4"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.1"
plotly = "5.8.1"
tenacity = "8.0.1"
Werkzeug = "2.2.3"
zipp = "3.8.0"
setuptools = "65.5.1"
pyarrow = "~17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
