[tool.poetry]
name = "qviz"
version = "0.1.0"
description = "CI tool for OTree index visualization"
authors = ["Qbeast"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.5"
blinker = "1.8.2"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
dash = "2.18.1"
dash-core-components = "2.0.0"
dash-html-components = "2.0.0"
dash-table = "5.0.0"
dash-cytoscape = "1.0.2"
deltalake = "0.20.2"
flask = "3.0.3"
idna = "3.10"
importlib-metadata = "8.5.0"
itsdangerous = "2.2.0"
jinja2 = "3.1.4"
markupsafe = "3.0.1"
nest-asyncio = "1.6.0"
numpy = "2.1.2"
packaging = "24.1"
plotly = "5.24.1"
pyarrow = "17.0.0"
requests = "2.32.3"
retrying = "1.3.4"
setuptools = "75.2.0"
six = "1.16.0"
tenacity = "9.0.0"
typing-extensions = "4.12.2"
urllib3 = "2.2.3"
werkzeug = "3.0.4"
zipp = "3.20.2"

[tool.poetry.scripts]
qviz = "qviz:show_tree"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
